# mugit

./: .gitignore  Cargo.toml  README.md
src/: add.rs  commands.yml  commit.rs  common.rs  config.rs  hash.rs  head.rs  index.rs  init.rs  log.rs  main.rs  object.rs
