[package]
name = "mygit"
version = "0.1.0"
authors = ["saiton03 <saiton15603@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-beta.4", features = ["yaml"] }
toml = "0.5.8"
serde = "1.0"
serde_derive = "1.0"
rust-crypto = "0.2.36"
flate2 = "1.0.22"
hex = "0.4.3"
regex = "1"
chrono = "0.4"
